[package]
name = "gvrtex_macros"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
