[package]
name = "gvrtex_macros"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Internal macros used by the gvrtex crate"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
